--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "fs-extra": "^3.0.1",
     "highlight.js": "github:marcoscaceres/highlight.js",
     "hyperhtml": "^0.11.7",
+    "leaflet": "^1.0.3",
     "loading-indicator": "^2.0.0",
     "marcosc-async": "^4.0.3",
     "marked": "^0.3.6",
